# paste-plate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  canvas.rs  clipboard.rs  input.rs  main.rs  node.rs  tools.rs
src/ui/: mod.rs
