[package]
name = "paste-plate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.29", features = ["wgpu", "wayland", "x11"] }
egui = "0.29"
arboard = "3.4"
image = { version = "0.25", features = ["png", "jpeg"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
